# LR7

Task_1/: CMakeLists.txt  Header.h  Task_1  Task_1.cpp  perevod.cpp
Task_2/: CMakeLists.txt  Header.h  Task_2  Task_2.cpp  funcs.cpp  input.cpp
Task_3/: CMakeLists.txt  Header.h  Task_3  Task_3.cpp  funcs.cpp  input.cpp
Task_4/: CMakeLists.txt  Header.h  Task_4  Task_4.cpp  funcs.cpp  input.cpp
Task_5/: CMakeLists.txt  Header.h  Task_5  Task_5.cpp  funcs.cpp
